src/snapshots/squawk__parse__tests__load_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: LoadStmt(
                    Object({
                        "filename": String(
                            "filename",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    16,
                ),
            },
        ),
    ],
)
