src/snapshots/squawk__parse__tests__parse_alter_domain_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterDomainStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "subtype": String(
                            "O",
                        ),
                        "typeName": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "zipcode",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
