src/snapshots/squawk__parse__tests__parse_create_schema_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateSchemaStmt(
                    Object({
                        "schemaname": String(
                            "schema_name",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    25,
                ),
            },
        ),
    ],
)
